# parallel-programming

./: CMakeLists.txt  README.md
dot_product/: CMakeLists.txt  bench.cpp  cl_util.cpp  cl_util.h  init.cpp  init.h  solution.cpp  solution.h  validate.cpp
lock_free_ring_buffer/: CMakeLists.txt  bench.cpp  lock_free_ring_buffer.h  validate.cpp
matmul/: CMakeLists.txt  bench.cpp  cl_util.cpp  init.cpp  init.h  solution.cpp  solution.h  validate.cpp
memory_reordering/: CMakeLists.txt  main.cpp
seam_carving/: CMakeLists.txt  bench.cpp  data_paths.h.in  init.cpp  init.h  kernels.cl  solution.cpp  solution.h  validate.cpp
